# payments

./: .env.example  .flake8  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
.ralphex/: config
.ralphex/agents/: documentation.txt  implementation.txt  quality.txt  simplification.txt  testing.txt
.ralphex/prompts/: codex.txt  codex_review.txt  custom_eval.txt  custom_review.txt  finalize.txt  make_plan.txt  review_first.txt  review_second.txt  task.txt
alembic/: env.py
alembic/versions/: 001_create_payments_and_outbox.py  002_add_webhook_delivered_at.py
app/: config.py  db.py  main.py
app/api/: deps.py
app/api/routes/: payments.py
app/consumer/: __main__.py  main.py  payment_processor.py  processor.py  webhook_processor.py
app/messaging/: __init__.py  broker.py  utils.py
app/models/: __init__.py  outbox.py  payment.py
app/outbox/: __main__.py  relay.py
app/schemas/: payment.py
app/services/: payment_service.py  webhook_service.py
tests/: conftest.py  test_api.py  test_consumer.py  test_messaging_topology.py  test_messaging_utils.py  test_outbox_relay.py  test_payment_service.py  test_webhook_service.py
