[project]
name = "payments"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.5",
    "asyncpg>=0.31.0",
    "fastapi>=0.139.0",
    "faststream[rabbit]>=0.7.1",
    "httpx>=0.28.1",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "python-dotenv>=1.2.2",
    "sqlalchemy[asyncio]>=2.0.51",
    "uvicorn[standard]>=0.51.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "flake8>=7.3.0",
    "vulture>=2.16",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py314"
exclude = [".venv", "venv", "alembic"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]

[tool.mypy]
python_version = "3.14"
mypy_path = "."
explicit_package_bases = true
strict = false
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
plugins = ["pydantic.mypy"]
pretty = true
exclude = ["^\\.venv/", "^venv/", "^alembic/"]

[[tool.mypy.overrides]]
module = ["aio_pika.*", "aiormq.*", "faststream.*"]
ignore_missing_imports = true

[tool.vulture]
paths = ["app", "tests"]
exclude = [".venv", "venv", "alembic"]
min_confidence = 80
ignore_names = ["require_stack"]
